RESOLVED FIXED287696
AX: Regression Safari 18.3: Gmail's new email compose field is inaccessible via VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=287696
Summary AX: Regression Safari 18.3: Gmail's new email compose field is inaccessible v...
Samar Sunkaria
Reported 2025-02-14 03:13:31 PST
Created attachment 474233 [details] Gmail's new email dialog Starting with Safari 18.3 (and STP 210), Gmail's new email compose field is inaccessible via VoiceOver. The entire new email dialog (see attached screenshot) is not part of the accessibility tree. I am not able to navigate to that dialog with VoiceOver. If I place the cursor in the email compose field using my mouse pointer, VoiceOver is able to announce the text around my cursor. However, if I navigate to any other element on the page, I am not able to navigate back to the email compose field. This issue only reproduces when the new email dialog is not full-screen/maximized. I am able to consistently reproduce this issue across multiple machines, running either Safari 18.3 or STP 210 (or newer). This issue is not reproducible on Safari 18.2 and STP 209.
Attachments
Gmail's new email dialog (145.76 KB, image/png)
2025-02-14 03:13 PST, Samar Sunkaria
no flags
Radar WebKit Bug Importer
Comment 1 2025-02-14 03:13:44 PST
Samar Sunkaria
Comment 2 2025-02-14 04:40:25 PST
I bisected the issue down to the following commits with the help of the build archives: - 287155@main good 5ea352280424fe1276451efb0a27c03e7c70a57e - 287160@main bad a710cc4e9b3fd23fee175c127d74d0f265ec60cc https://github.com/WebKit/WebKit/compare/5ea352280424fe1276451efb0a27c03e7c70a57e...a710cc4e9b3fd23fee175c127d74d0f265ec60cc Two of the commits are related to AX.
Tyler Wilcock
Comment 3 2025-02-14 14:24:14 PST
EWS
Comment 4 2025-02-15 09:50:35 PST
Committed 290442@main (5d76dffe6890): <https://commits.webkit.org/290442@main> Reviewed commits have been landed. Closing PR #40644 and removing active labels.
EWS
Comment 5 2025-02-17 10:03:49 PST
Committed 289651.127@safari-7621-branch (8d1ac5716d13): <https://commits.webkit.org/289651.127@safari-7621-branch> Reviewed commits have been landed. Closing PR #2609 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.