AX: Regression Safari 18.3: Gmail's new email compose field is inaccessible via VoiceOver https://bugs.webkit.org/show_bug.cgi?id=287696 rdar://144855532

Reviewed by Chris Fleizach.

In https://commits.webkit.org/287159@main, we added an `isRenderHidden` check to the ancestry walk, returning
AccessibilityObjectInclusion::IgnoreObject if true. However, this is the wrong thing to do when the AccessibilityObject
is within a visibility:visible subtree, that in turn has a visibility:hidden ancestor, as we would ignore the object
once getting to the hidden ancestor, even though visibility:visible cancels out visibility:hidden.

Fix this by only checking for display:none in the ancestry walk.

* LayoutTests/accessibility/visibility-visible-inside-hidden-expected.txt: Added.
* LayoutTests/accessibility/visibility-visible-inside-hidden.html: Added.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::defaultObjectInclusion const):

Canonical link: https://commits.webkit.org/290442@main